Merging the changes from the 1.0.x branch back to trunk
git-svn-id: http://geowebcache.org/svn/trunk@508 e7b91dd5-889a-44ae-8e97-0abfc27e49b2